--- a/src/app/features/components/file-browser/nautilus/nautilus.component.html
+++ b/src/app/features/components/file-browser/nautilus/nautilus.component.html
@@ -55,6 +55,7 @@
       [layout]="layout()"
       [pathOptionsMenu]="pathOptionsMenu"
       [viewMenu]="viewMenu"
+      [canAcceptFile]="canAcceptFile"
       (goBack)="goBack()"
       (goForward)="goForward()"
       (toggleSidebar)="sidenav.toggle()"
@@ -66,12 +67,15 @@
       (searchFilterChange)="searchFilter.set($event)"
       (isSearchModeChange)="isSearchMode.set($event)"
       (isEditingPathChange)="isEditingPath.set($event)"
+      (droppedOnSegment)="onDropToSegment($event)"
     ></app-nautilus-toolbar>
 
     @if (tabs().length > 1) {
       <app-nautilus-tabs
         [tabs]="tabs()"
         [activeTabIndex]="activeTabIndex()"
+        [isDragging]="isDragging()"
+        [hoveredTabIndex]="hoveredTabIndex()"
         (switchTab)="switchTab($event)"
         (closeTab)="closeTab($event)"
         (moveTab)="moveTab($event.previousIndex, $event.currentIndex)"
@@ -114,10 +118,10 @@
             (switchPane)="switchPane($event)"
             (clearSelection)="clearSelection()"
             (setContextItem)="setContextItem($event)"
-            (onDropToCurrentDirectory)="onDropToCurrentDirectory($event.event, $event.paneIndex)"
-            (onDragStarted)="onDragStarted($event)"
-            (onDragEnded)="onDragEnded()"
-            (onItemClick)="onItemClick($event.item, $event.event, $event.index)"
+            (dropToCurrentDirectory)="onDropToCurrentDirectory($event.event, $event.paneIndex)"
+            (dragStarted)="onDragStarted($event)"
+            (dragEnded)="onDragEnded($event)"
+            (itemClick)="onItemClick($event.item, $event.event, $event.index)"
             (navigateTo)="navigateTo($event)"
             (toggleStar)="toggleStar($event)"
             (toggleSort)="toggleSort($event)"
@@ -154,10 +158,10 @@
             (switchPane)="switchPane($event)"
             (clearSelection)="clearSelection()"
             (setContextItem)="setContextItem($event)"
-            (onDropToCurrentDirectory)="onDropToCurrentDirectory($event.event, $event.paneIndex)"
-            (onDragStarted)="onDragStarted($event)"
-            (onDragEnded)="onDragEnded()"
-            (onItemClick)="onItemClick($event.item, $event.event, $event.index)"
+            (dropToCurrentDirectory)="onDropToCurrentDirectory($event.event, $event.paneIndex)"
+            (dragStarted)="onDragStarted($event)"
+            (dragEnded)="onDragEnded($event)"
+            (itemClick)="onItemClick($event.item, $event.event, $event.index)"
             (navigateTo)="navigateTo($event)"
             (toggleStar)="toggleStar($event)"
             (toggleSort)="toggleSort($event)"
@@ -193,10 +197,10 @@
           (switchPane)="switchPane($event)"
           (clearSelection)="clearSelection()"
           (setContextItem)="setContextItem($event)"
-          (onDropToCurrentDirectory)="onDropToCurrentDirectory($event.event, $event.paneIndex)"
-          (onDragStarted)="onDragStarted($event)"
-          (onDragEnded)="onDragEnded()"
-          (onItemClick)="onItemClick($event.item, $event.event, $event.index)"
+          (dropToCurrentDirectory)="onDropToCurrentDirectory($event.event, $event.paneIndex)"
+          (dragStarted)="onDragStarted($event)"
+          (dragEnded)="onDragEnded($event)"
+          (itemClick)="onItemClick($event.item, $event.event, $event.index)"
           (navigateTo)="navigateTo($event)"
           (toggleStar)="toggleStar($event)"
           (toggleSort)="toggleSort($event)"
