--- a/src/app/layout/banners/banner.component.html
+++ b/src/app/layout/banners/banner.component.html
@@ -21,7 +21,7 @@
   <span class="banner-subtitle"
     >{{ 'banners.flatpak.subtitle' | translate }}
     <a
-      href="https://github.com/Zarestia-Dev/rclone-manager/wiki/Troubleshooting-Linux#-issue-2-permission-errors-flatpak-security"
+      href="https://hakanismail.info/zarestia/rclone-manager/docs/troubleshooting-linux#issue-2-permission-errors-flatpak-security"
       target="_blank"
       rel="noopener noreferrer"
     >
