--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -124,7 +124,7 @@
           }
           @default {
             <app-app-detail
-              [mainOperationType]="currentTab()"
+              [mainOperationType]="$any(currentTab())"
               [selectedSyncOperation]="selectedSyncOperation()"
               [selectedRemote]="remote"
               [remoteSettings]="selectedRemoteSettings()"
